@@ -15,6 +15,7 @@
 * Eliminate warnings when reloading scan options with option groups.
 * + option to change the pdf and djvu access and modification times to the
   metadata date
+* Sort config file and ensure only currently used settings are stored
 
 
 1.5.5 (23.10.2016):
